--- a/.gitignore
+++ b/.gitignore
@@ -134,4 +134,5 @@ venv
 
 test_datasets
 datasets
-table-transformer/model/pubtables1m_detection_detr_r18.pth
+table_transformer/model/pubtables1m_detection_detr_r18.pth
+data
