--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,4 @@ datasets
 table_transformer/model/pubtables1m_detection_detr_r18.pth
 data
 table_transformer/model/TATR-v1.1-All-msft.pth
+table_classifier_models
