--- a/.gitignore
+++ b/.gitignore
@@ -138,3 +138,4 @@ table_transformer/model/pubtables1m_detection_detr_r18.pth
 data
 table_transformer/model/TATR-v1.1-All-msft.pth
 table_classifier_models
+results
